# open-pcc-metric

./: .flake8  .gitignore  pylintrc  pyproject.toml  requirements.txt
.github/workflows/: default.yml  pylint.yml
collab_eval/: summary.csv  vis.py
docs/: classes.mmd  generate.sh
open_pcc_metric/: __main__.py  calculator.py  cloud_pair.py  handler.py  logger.py  metric.py
tests/unit/: test_metric.py
