[tool.poetry]
name = "open-pcc-metric"
version = "0.1.0"
description = ""
authors = ["aapozd <aapozdnyakove@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
open3d = "^0.18.0"
addict = "^2.4.0"
pillow = "^10.3.0"
matplotlib = "^3.8.4"
numpy = "^1.26.4"
pandas = "^2.2.2"
pyyaml = "^6.0.1"
scikit-learn = "^1.4.2"
tqdm = "^4.66.2"
pyquaternion = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
